Update project to Java 17;